--- a/itorrent.dcproj/project/index.html
+++ b/itorrent.dcproj/project/index.html
@@ -39,6 +39,7 @@
                         <div id="downLbl" apple-part="com.apple.Dashcode.part.webtext" class="apple-text apple-no-children downLbl_template" apple-text-overflow="ellipsis"></div>
                         <div id="upLbl" apple-part="com.apple.Dashcode.part.webtext" class="apple-text apple-no-children upLbl_template" apple-text-overflow="ellipsis"></div>
                         <div apple-part="com.apple.Dashcode.part.horizontallevelindicator" class="apple-no-children progressBar_template" id="progressBar"></div>
+                        <div apple-part="com.apple.Dashcode.part.webtext" class="apple-text apple-no-children percent_template" apple-default-image-visibility="hidden" apple-text-overflow="ellipsis" id="percent"></div>
                     </li>
                 </ul>
             </div>
