--- a/itorrent.dcproj/project/index.html
+++ b/itorrent.dcproj/project/index.html
@@ -54,7 +54,7 @@
                     <div apple-part="com.apple.Dashcode.part.pushbutton" class="apple-no-children" apple-text-overflow="ellipsis" apple-style="image-theme: 0; image-shape: 3; image-button-type: 0; image-opacity: 1.00; image-top-color: 0.274601012,0.607843161,0.307023585,1; image-bottom-color: 1,1,1,1; image-radius: 5,5,5,5; image-border: 1; image-border-color: 0,0,0,0.2; image-border-width: 1; shine-on: 1; shine-strength: 0.17; shine-alpha-level: 0.04; shine-height: 0.50; glass-arc-height: 0.00; embossed-on: 1; embossed-depth: 1; embossed-shadow: 0.68; embossed-highlight: 0.3; shadow-include-shadow: 0;" id="startButton"></div>
                     <div apple-part="com.apple.Dashcode.part.pushbutton" class="apple-no-children" apple-text-overflow="ellipsis" apple-style="image-theme: 0; image-shape: 3; image-button-type: 0; image-opacity: 1.00; image-top-color: 0.607843161,0.238483936,0.21697399,1; image-bottom-color: 1,1,1,1; image-radius: 5,5,5,5; image-border: 1; image-border-color: 0,0,0,0.2; image-border-width: 1; shine-on: 1; shine-strength: 0.17; shine-alpha-level: 0.04; shine-height: 0.50; glass-arc-height: 0.00; embossed-on: 1; embossed-depth: 1; embossed-shadow: 0.68; embossed-highlight: 0.3; shadow-include-shadow: 0;" id="stopButton"></div>
                 </div>
-                <div apple-part="com.apple.Dashcode.part.webtext" class="apple-text apple-no-children" apple-default-image-visibility="hidden" apple-text-overflow="ellipsis" id="text" apple-style="part-width-dependent: true;part-height-dependent: true;"></div>
+                <div apple-part="com.apple.Dashcode.part.webtext" class="apple-text apple-no-children" apple-default-image-visibility="hidden" apple-text-overflow="ellipsis" id="filesHeader" apple-style="part-width-dependent: true;part-height-dependent: true;"></div>
                 <ul apple-part="com.apple.Dashcode.part.roundedRectangleList" id="torrentFileList">
                     <li id="torrentFileListRowTemplate" apple-template="true" class="torrentFileListRowTemplate_template" style="border-top-width: 0px; ">
                         <div id="detailFileName" apple-part="com.apple.Dashcode.part.webtext" class="apple-text apple-no-children detailFileName_template" apple-text-overflow="ellipsis" apple-style="part-height-dependent: true;"></div>
@@ -64,7 +64,7 @@
                             <option class="apple-hidden" id="text3" value="1">Low</option>
                             <option class="apple-hidden" value="0">Don't Download</option>
                         </select>
-                        <div id="detailFilePercent" apple-part="com.apple.Dashcode.part.webtext" class="apple-text apple-no-children detailFilePercent_template" apple-text-overflow="ellipsis"></div>
+                        <div id="detailFileProgress" apple-part="com.apple.Dashcode.part.webtext" class="apple-text apple-no-children detailFileProgress_template" apple-text-overflow="ellipsis"></div>
                     </li>
                 </ul>
             </div>
